ft-(authentication) user authentication and authorization (#10)
- Add an auth controller class
- Add a signin controller method
- Add a signout controller method
- Install and configure jsonwebtoken
- Install and configure express-jwt
- Add auth routes
- Write tests that implement user authentication
- Add authenticate and authorize middleware functions
- Integrate authentication and authorization to protected routes

[Finishes #169063810]
